--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Maia-Darker
-gtk-icon-theme-name=Breeze-Maia-Dark
-gtk-font-name=Noto Sans UI 10
+gtk-icon-theme-name=Arc-Maia
+gtk-font-name=Monospace Bold 10
 gtk-cursor-theme-name=xcursor-breeze
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
