--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -22,4 +22,4 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x3\xc0\0\0\x2(\0\0\a\x7f\0\0\x4\x37\0\0\x3\xc1\0\0\x2)\0\0\a~\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x4\x10\0\0\0\x18\0\0\a\x7f\0\0\x4\x37\0\0\x4\x11\0\0\0\x19\0\0\a~\0\0\x4\x36\0\0\0\0\0\0\0\0\a\x80)
