--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 # set colour to 256 for putty
 set -g default-terminal "screen-256color"
 
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 set -g mouse on
 
 # resize panes easier
@@ -10,10 +12,13 @@ bind -n M-Left resize-pane -L 25
 bind -n M-Right resize-pane -R 25
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
+
+# new window inherit current location
+bind c new-window -c '#{pane_current_path}'
 
 # switch panes using Alt-arrow without prefix
 bind -n M-h select-pane -L
@@ -70,7 +75,10 @@ set-option -g bell-action none
 
 
 # vi key bindings
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 set -g default-terminal "screen-256color"
 
@@ -93,3 +101,6 @@ setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=c
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # }
+
+# Plugin manager
+run '~/.tmux/plugins/tpm/tpm'
