--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,10 @@
-# set colour to 256 for putty
-set -g default-terminal "screen-256color"
-
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+
+# Fixes from nvim :checkhealth
+set -g default-terminal "tmux-256color"
+set-option -g focus-events on
+set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 set -g mouse on
 
@@ -45,6 +48,7 @@ set-option -g bell-action none
 #  modes
 setw -g clock-mode-colour colour5
 
+set-option -g history-limit 5000
 
 ######################
 #### DESIGN CHANGES ###
@@ -80,8 +84,6 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
-set -g default-terminal "screen-256color"
-
 # The modes {
 setw -g clock-mode-colour colour135
 
@@ -104,3 +106,4 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 
 # Plugin manager
 run '~/.tmux/plugins/tpm/tpm'
+
