New config for fedora

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,54 +1,39 @@
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-
-# Fixes from nvim :checkhealth
-set -g default-terminal "tmux-256color"
+set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -ga terminal-overrides ',xterm-256color:Tc'
+set-option -a terminal-features 'xterm-256color:RGB'
 
 set -g mouse on
 
-# resize panes easier
-bind -n M-Up resize-pane -U 15
-bind -n M-Down resize-pane -D 15
-bind -n M-Left resize-pane -L 25
-bind -n M-Right resize-pane -R 25
+#setw -g mode-keys vi
+set-window-option -g mode-keys vi
+unbind -T copy-mode-vi 'v'
+unbind -T copy-mode-vi 'y'
+unbind -T copy-mode-vi MouseDragEnd1Pane
+unbind -T copy-mode-vi Enter   #this is the default binding for copy (but not to system clipboard)
 
-# split panes using | and -
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
-unbind '"'
-unbind %
-
-# new window inherit current location
-bind c new-window -c '#{pane_current_path}'
-
-# switch panes using Alt-arrow without prefix
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-
-# disable escape key as alt
-set -s escape-time 0
-
-# reload config file (change file location to your the tmux.conf you want to use)
-bind C-r source-file ~/.tmux.conf
-
-# don't rename windows automatically
-set-option -g allow-rename off
-
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
-
-#  modes
-setw -g clock-mode-colour colour5
+#(many tried, only this worked)
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -selection c'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -selection c'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -selection c'
 
 set-option -g history-limit 5000
+
+bind -n M-Up resize-pane -U 15
+bind -n M-Down resize-pane -D 15
+bind -n M-Left resize-pane -L 15
+bind -n M-Right resize-pane -R 15
+
+bind | split-window -h -c '#{pane_current_pane}'
+bind - split-window -v -c '#{pane_current_pane}'
+unbind %
+unbind '"'
+
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+
 
 ######################
 #### DESIGN CHANGES ###
@@ -77,33 +62,24 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-
-# vi key bindings
-setw -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
-
-# The modes {
+# The modes
 setw -g clock-mode-colour colour135
 
-# }
-# The statusbar {
+
+# The statusbar
+
+%hidden STATUS_BAR_BG_COLOR=colour234
+#%hidden STATUS_BAR_FG_COLOR=colour234
+%hidden STATUS_BAR_FOCUSED_BG_COLOR=colour237
+#%hidden STATUS_BAR_FOCUSED_FG_COLOR=colour250
 
 set -g status-position bottom
-set -g status-bg colour234
+set -g status-bg $STATUS_BAR_BG_COLOR
 set -g status-fg colour137
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
+setw -g window-status-current-format ' #[bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#I#[fg=colour250, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]:#[fg=colour226, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#W#[fg=colour50, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#F#[bg=#{STATUS_BAR_BG_COLOR}] '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-# }
-
-# Plugin manager
-run '~/.tmux/plugins/tpm/tpm'
-
