Integrate with neovim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -a terminal-features 'xterm-256color:RGB'
+
+set -g default-terminal "xterm-256color"
+set-option -a terminal-features 'alacritty:RGB'
+#set-option -a terminal-features 'xterm-256color:RGB'
 
 set -g mouse on
 
@@ -19,20 +22,20 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -selecti
 
 set-option -g history-limit 5000
 
-bind -n M-Up resize-pane -U 15
-bind -n M-Down resize-pane -D 15
-bind -n M-Left resize-pane -L 15
-bind -n M-Right resize-pane -R 15
+#bind -n M-Up resize-pane -U 15
+#bind -n M-Down resize-pane -D 15
+#bind -n M-Left resize-pane -L 15
+#bind -n M-Right resize-pane -R 15
 
-bind | split-window -h -c '#{pane_current_pane}'
+bind '\' split-window -h -c '#{pane_current_pane}'
 bind - split-window -v -c '#{pane_current_pane}'
 unbind %
 unbind '"'
 
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
+#bind -n M-h select-pane -L
+#bind -n M-l select-pane -R
+#bind -n M-j select-pane -D
+#bind -n M-k select-pane -U
 
 
 ######################
@@ -62,11 +65,11 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-# The modes
+# The modes {
 setw -g clock-mode-colour colour135
 
-
-# The statusbar
+# }
+# The statusbar {
 
 %hidden STATUS_BAR_BG_COLOR=colour234
 #%hidden STATUS_BAR_FG_COLOR=colour234
@@ -81,5 +84,39 @@ set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=c
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-format ' #[bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#I#[fg=colour250, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]:#[fg=colour255, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#W#[fg=colour50, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#F#[bg=#{STATUS_BAR_BG_COLOR}] '
+setw -g window-status-current-format ' #[bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#I#[fg=colour250, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]:#[fg=colour226, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#W#[fg=colour50, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#F#[bg=#{STATUS_BAR_BG_COLOR}] '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+# }
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'aserowy/tmux.nvim'
+
+# navigation
+set -g @tmux-nvim-navigation true
+set -g @tmux-nvim-navigation-cycle true
+set -g @tmux-nvim-navigation-keybinding-left 'M-h'
+set -g @tmux-nvim-navigation-keybinding-down 'M-j'
+set -g @tmux-nvim-navigation-keybinding-up 'M-k'
+set -g @tmux-nvim-navigation-keybinding-right 'M-l'
+
+# resize
+set -g @tmux-nvim-resize true
+set -g @tmux-nvim-resize-step-x 15
+set -g @tmux-nvim-resize-step-y 15
+set -g @tmux-nvim-resize-keybinding-left 'M-Left'
+set -g @tmux-nvim-resize-keybinding-down 'M-Down'
+set -g @tmux-nvim-resize-keybinding-up 'M-Up'
+set -g @tmux-nvim-resize-keybinding-right 'M-Right'
+
+
+set -g @tmux-nvim-swap true
+set -g @tmux-nvim-swap-keybinding-left 'C-S-Left'
+set -g @tmux-nvim-swap-keybinding-down 'C-S-Down'
+set -g @tmux-nvim-swap-keybinding-up 'C-S-Up'
+set -g @tmux-nvim-swap-keybinding-right 'C-S-Right'
+
+
+
+run '~/.tmux/plugins/tpm/tpm'
