--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,9 @@ unbind -T copy-mode-vi Enter   #this is the default binding for copy (but not to
 #(many tried, only this worked)
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -selection c'
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -selection c'
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -selection c'
+# Don't go to bottom after highlighting
+unbind   -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -selection c'
 
 set-option -g history-limit 5000
@@ -116,7 +118,5 @@ set -g @tmux-nvim-swap-keybinding-left 'C-S-Left'
 set -g @tmux-nvim-swap-keybinding-down 'C-S-Down'
 set -g @tmux-nvim-swap-keybinding-up 'C-S-Up'
 set -g @tmux-nvim-swap-keybinding-right 'C-S-Right'
-
-
 
 run '~/.tmux/plugins/tpm/tpm'
