--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,16 +78,24 @@ setw -g clock-mode-colour colour135
 %hidden STATUS_BAR_FOCUSED_BG_COLOR=colour237
 #%hidden STATUS_BAR_FOCUSED_FG_COLOR=colour250
 
-set -g status-position bottom
-set -g status-bg $STATUS_BAR_BG_COLOR
-set -g status-fg colour137
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
+# Status bar settings adapted from powerline
+set-option -g status on
+set-option -g status-interval 10
+set-option -g status-fg colour231
+set-option -g status-bg colour234
+set-option -g status-left-length 20
+set-option -g status-left '#{?client_prefix,#[fg=colour254]#[bg=colour31]#[bold],#[fg=colour16]#[bg=colour254]#[bold]} #S #{?client_prefix,#[fg=colour31]#[bg=colour234]#[nobold],#[fg=colour254]#[bg=colour234]#[nobold]}'
+set-option -g status-right '#[fg=colour252,bg=colour233,nobold,noitalics,nounderscore]#[fg=colour16,bg=colour252,bold,noitalics,nounderscore] %H:%M:%S '
+set-option -g status-right-length 10
+set-option -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
+set-option -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+set-option -g window-status-last-style fg=colour31
+set-option -wg window-status-style none,fg=colour249
+set-option -wg window-status-activity-style none,fg=yellow
+set-option -wg window-status-bell-style none,fg=red
 
-setw -g window-status-current-format ' #[bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#I#[fg=colour250, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]:#[fg=colour226, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#W#[fg=colour50, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#F#[bg=#{STATUS_BAR_BG_COLOR}] '
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+#set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+#setw -g window-status-current-format ' #[bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#I#[fg=colour250, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]:#[fg=colour226, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#W#[fg=colour50, bg=#{STATUS_BAR_FOCUSED_BG_COLOR}]#F#[bg=#{STATUS_BAR_BG_COLOR}] '
 
 # }
 # List of plugins
@@ -118,5 +126,7 @@ set -g @tmux-nvim-swap-keybinding-left 'C-S-Left'
 set -g @tmux-nvim-swap-keybinding-down 'C-S-Down'
 set -g @tmux-nvim-swap-keybinding-up 'C-S-Up'
 set -g @tmux-nvim-swap-keybinding-right 'C-S-Right'
+
+
 
 run '~/.tmux/plugins/tpm/tpm'
